高石さん、小久保さん文追加

--- a/html/parts.html
+++ b/html/parts.html
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script src="./js/jquery-ui.min-1.10.4.js" ></script>
     <!-- css -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="icon" href="" />
   </head>
 
@@ -737,9 +737,9 @@
           <!-- タブ -->
           <div class='header-booking__tab booking-tab'>
             <div class='booking-tab__buttons'>
-              <span class='booking-tab__content1'>予約管理</span>
-              <span class='booking-tab__content2'>シフト管理</span>
-              <span class='booking-tab__content3'>電子カルテ</span>
+              <a class='booking-tab__content1'>予約管理</a>
+              <a class='booking-tab__content2'>シフト管理</a>
+              <a class='booking-tab__content3'>電子カルテ</a>
               <div id='booking-tab__lamp' class='booking-tab__content1'></div>
             </div>
           </div>
@@ -773,9 +773,9 @@
           <!-- タブ -->
           <div class='header-booking__tab booking-tab'>
             <div class='booking-tab__buttons'>
-              <span class='booking-tab__content1'>予約管理</span>
-              <span class='booking-tab__content2'>シフト管理</span>
-              <span class='booking-tab__content3'>電子カルテ</span>
+              <a class='booking-tab__content1'>予約管理</a>
+              <a class='booking-tab__content2'>シフト管理</a>
+              <a class='booking-tab__content3'>電子カルテ</a>
               <div id='booking-tab__lamp' class='booking-tab__content1'></div>
             </div>
           </div>
