--- a/html/shop/reservation/C05.html
+++ b/html/shop/reservation/C05.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <!-- reset css -->
-    <link rel="stylesheet" href="../../../css/reset.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
     <!-- Google Fonts -->
@@ -19,9 +19,9 @@
     <!-- datepicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <script src="../../../js/jquery-ui.min-1.10.4.js" ></script>
+    <script src="/js/jquery-ui.min-1.10.4.js" ></script>
     <!-- css -->
-    <link rel="stylesheet" href="../../../css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="icon" href="" />
   </head>
 
@@ -31,22 +31,22 @@
         <div class="header-booking__left">
           <h1 class="header-booking__logo">
             <a href="/" >
-              <img src="../../..//image/common/logo-green.png" alt="ロゴ">
+              <img src="/image/common/logo-green.png" alt="ロゴ">
             </a>
           </h1>
 
           <div class="header-booking__login-name">〇〇〇〇さんでログイン中</div>
 
-          <a href="" class="header-booking__logout-button logout-button--small"><img src="../../../image/common/logout-icon.png" alt="ログアウトアイコン">ログアウト</a>
+          <a href="" class="header-booking__logout-button logout-button--small"><img src="/image/common/logout-icon.png" alt="ログアウトアイコン">ログアウト</a>
         </div>
 
         <div class="header-booking__right">
           <!-- タブ -->
           <div class='header-booking__tab booking-tab'>
             <div class='booking-tab__buttons'>
-              <span class='booking-tab__content1'>予約管理</span>
-              <span class='booking-tab__content2'>シフト管理</span>
-              <span class='booking-tab__content3'>電子カルテ</span>
+              <a class='booking-tab__content1'>予約管理</a>
+              <a class='booking-tab__content2'>シフト管理</a>
+              <a class='booking-tab__content3'>電子カルテ</a>
               <div id='booking-tab__lamp' class='booking-tab__content1'></div>
             </div>
           </div>
@@ -68,23 +68,23 @@
       <main class="main__shop__reservation">
         <div class="container">
           <div class="main__shop__reservation__wrapper">
-            <h2 class="main__shop__reservation__title"><img class="icon__title" src="../../../image/common/add-icon/checkbox_pencil_icon.png" alt="">予約する</h2>
+            <h2 class="main__shop__reservation__title"><img class="icon__title" src="/image/common/add-icon/checkbox_pencil_icon.png" alt="">予約する</h2>
             <div class="customer__menu__wrap">
               <a  href="">
                 <div class="customer__menu">
-                    <img class="customer__icons" src="../../../image/common/add-icon/add-customer-icon.png" alt="">
+                    <img class="customer__icons" src="/image/common/add-icon/add-customer-icon.png" alt="">
                     <p>新規のお客さま</p>
                 </div>
               </a>
               <a  href="">
                 <div class="customer__menu">
-                    <img class="customer__icons" src="../../../image/common/add-icon/reserve-list-icon.png" alt="">
+                    <img class="customer__icons" src="/image/common/add-icon/reserve-list-icon.png" alt="">
                     <p>お客さまリストから</br>予約する</p>
                 </div>
               </a>
               <a  href="">
                 <div class="customer__menu">
-                    <img class="customer__icons" src="../../../image/common/add-icon/reserve-change-icon.png" alt="">
+                    <img class="customer__icons" src="/image/common/add-icon/reserve-change-icon.png" alt="">
                     <p>予約内容を変更</p>
                 </div>
               </a>
@@ -94,6 +94,6 @@
       </main>
 
     <!-- js -->
-    <script defer type="text/javascript" src="../../../js/script.js"></script>
+    <script defer type="text/javascript" src="/js/script.js"></script>
   </body>
 </html>
