--- a/html/shop/record/pets/grooming_order/order_sheet/D28.html
+++ b/html/shop/record/pets/grooming_order/order_sheet/D28.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <!-- reset css -->
-    <link rel="stylesheet" href="../../../../../../css/reset.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
     <!-- Google Fonts -->
@@ -19,9 +19,9 @@
     <!-- datepicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <script src="../../../../../../js/jquery-ui.min-1.10.4.js" ></script>
+    <script src="/js/jquery-ui.min-1.10.4.js" ></script>
     <!-- css -->
-    <link rel="stylesheet" href="../../../../../../css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="icon" href="" />
   </head>
 
@@ -31,22 +31,22 @@
         <div class="header-booking__left">
           <h1 class="header-booking__logo">
             <a href="/" >
-              <img src="../../../../../../image/common/logo-green.png" alt="ロゴ">
+              <img src="/image/common/logo-green.png" alt="ロゴ">
             </a>
           </h1>
 
           <div class="header-booking__login-name">〇〇〇〇さんでログイン中</div>
 
-          <a href="" class="header-booking__logout-button logout-button--small"><img src="../../../../../../image/common/logout-icon.png" alt="ログアウトアイコン">ログアウト</a>
+          <a href="" class="header-booking__logout-button logout-button--small"><img src="/image/common/logout-icon.png" alt="ログアウトアイコン">ログアウト</a>
         </div>
 
         <div class="header-booking__right">
           <!-- タブ -->
           <div class='header-booking__tab booking-tab'>
             <div class='booking-tab__buttons'>
-              <span class='booking-tab__content1'>予約管理</span>
-              <span class='booking-tab__content2'>シフト管理</span>
-              <span class='booking-tab__content3'>電子カルテ</span>
+              <a class='booking-tab__content1'>予約管理</a>
+              <a class='booking-tab__content2'>シフト管理</a>
+              <a class='booking-tab__content3'>電子カルテ</a>
               <div id='booking-tab__lamp' class='booking-tab__content3'></div>
             </div>
           </div>
@@ -69,10 +69,10 @@
         <div class="main__shop__record__pets__groomingorder__ordersheet__shift__title">
           <ul class="shift-title__list">
             <li class="shift-title__item">
-              <a href=""><img src="../../../../../../image/common/add-icon/customer-management-icon.png" alt="">顧客管理</a>
+              <a href=""><img src="/image/common/add-icon/customer-management-icon.png" alt="">顧客管理</a>
             </li>
             <li class="shift-title__item current">
-              <a href=""><img src="../../../../../../image/common/add-icon/pet-management-icon.png" alt="">ペット管理</a>
+              <a href=""><img src="/image/common/add-icon/pet-management-icon.png" alt="">ペット管理</a>
             </li>
           </ul>
         </div>
@@ -87,6 +87,6 @@
       </main>
 
     <!-- js -->
-    <script defer type="text/javascript" src="../../../../../../js/script.js"></script>
+    <script defer type="text/javascript" src="/js/script.js"></script>
   </body>
 </html>
