--- a/html/shop/reservation/C20.html
+++ b/html/shop/reservation/C20.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <!-- reset css -->
-    <link rel="stylesheet" href="../../../css/reset.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
     <!-- Google Fonts -->
@@ -19,9 +19,9 @@
     <!-- datepicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <script src="../../../js/jquery-ui.min-1.10.4.js" ></script>
+    <script src="/js/jquery-ui.min-1.10.4.js" ></script>
     <!-- css -->
-    <link rel="stylesheet" href="../../../css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="icon" href="" />
   </head>
 
@@ -30,7 +30,7 @@
       <main class="main__shop__reservation__c20">
         <div class="container">
           <div class="main__shop__reservation__c20__title">
-            <img class="alert__icons" src="../../../image/common/add-icon/alert-circle-icon.png" alt="">
+            <img class="alert__icons" src="/image/common/add-icon/alert-circle-icon.png" alt="">
             <p>ご予約ができませんでした</p>
           </div>
 
@@ -49,6 +49,6 @@
 
 
     <!-- js -->
-    <script defer type="text/javascript" src="../../../js/script.js"></script>
+    <script defer type="text/javascript" src="/js/script.js"></script>
   </body>
 </html>
