C02モーダル実装

--- a/html/shop/A02_login.html
+++ b/html/shop/A02_login.html
@@ -44,9 +44,9 @@
       <!-- タブ -->
       <div class='header-booking__tab booking-tab'>
         <div class='booking-tab__buttons'>
-          <span class='booking-tab__content1'>予約管理</span>
-          <span class='booking-tab__content2'>シフト管理</span>
-          <span class='booking-tab__content3'>電子カルテ</span>
+          <a class='booking-tab__content1'>予約管理</a>
+          <a class='booking-tab__content2'>シフト管理</a>
+          <a class='booking-tab__content3'>電子カルテ</a>
           <div id='booking-tab__lamp' class='booking-tab__content1'></div>
         </div>
       </div>
