--- a/html/shop/record/D01.html
+++ b/html/shop/record/D01.html
@@ -108,7 +108,7 @@
           </div>
           <div class="D01-customer-search__btn">
             <a href="" class="most-important-button most-important-button--icon"><img
-                src="../../../image/common/search-icon-white.png" alt="サーチアイコン">検索する</a>
+                src="/image/common/search-icon-white.png" alt="サーチアイコン">検索する</a>
           </div>
         </div>
       </div>
