--- a/html/shop/customer_mode/interview/finish/E09.html
+++ b/html/shop/customer_mode/interview/finish/E09.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <!-- reset css -->
-    <link rel="stylesheet" href="../../../../../css/reset.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"/>
     <!-- Google Fonts -->
@@ -19,9 +19,9 @@
     <!-- datepicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-    <script src="../../../../../js/jquery-ui.min-1.10.4.js" ></script>
+    <script src="/js/jquery-ui.min-1.10.4.js" ></script>
     <!-- css -->
-    <link rel="stylesheet" href="../../../../../css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="icon" href="" />
   </head>
 
@@ -31,7 +31,7 @@
         <div class="header-booking__left">
           <h1 class="header-booking__logo">
             <a href="/" >
-              <img src="../../../../..//image/common/logo-green.png" alt="ロゴ">
+              <img src="//image/common/logo-green.png" alt="ロゴ">
             </a>
           </h1>
         </div>
@@ -82,6 +82,6 @@
 
 
     <!-- js -->
-    <script defer type="text/javascript" src="../../../../../js/script.js"></script>
+    <script defer type="text/javascript" src="/js/script.js"></script>
   </body>
 </html>
