--- a/html/shop/record/pets/search/D07.html
+++ b/html/shop/record/pets/search/D07.html
@@ -19,7 +19,7 @@
   <!-- datepicker -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-  <script src="../../js/jquery-ui.min-1.10.4.js"></script>
+  <script src="/js/jquery-ui.min-1.10.4.js"></script>
   <!-- js -->
   <script defer type="text/javascript" src="/js/script.js"></script>
   <script defer type="text/javascript" src="/js/my-script.js"></script>
