--- a/html/shop/reservation_new/input/C06_make-reservation_no-reservation.html
+++ b/html/shop/reservation_new/input/C06_make-reservation_no-reservation.html
@@ -23,9 +23,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
   <script src="./js/jquery-ui.min-1.10.4.js"></script>
   <!-- css -->
-  <link rel="stylesheet" href="../../../../../css/styles.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="" />
-  <link rel="stylesheet" href="C06_make-reservation_no-reservation.css">
+
 </head>
 
 <body>
