--- a/html/shop/attendance_day/B04_shift-management-day_add.html
+++ b/html/shop/attendance_day/B04_shift-management-day_add.html
@@ -54,7 +54,7 @@
         <div class="b04__smda__wrapper--status">
           <p class="b04__smda__txt--status">出勤状況</p>
           <div class="header-booking__pull-down pull-down b04__smda__pull-down">
-            <select class="pull-down__select " required>
+            <select class="pull-down__select b04__smda__pull-down__select" required>
               <option value="" selected>出勤</option>
               <option value="option2">＃</option>
               <option value="option3">○○○○店</option>
