--- a/html/shop/customer_mode/vaccination/E15.html
+++ b/html/shop/customer_mode/vaccination/E15.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- meta情報 -->
-  <title>ワクチン・狂犬病ワクチン確認｜PETEMO グルーミングサロン 予約サイト管理</title>
+  <title>ワクチン接種に関する注意事項｜PETEMO グルーミングサロン 予約サイト管理</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <!-- reset css -->
