--- a/html/shop/reservation/edit/C09.html
+++ b/html/shop/reservation/edit/C09.html
@@ -191,8 +191,8 @@
       <!-- 毛玉・もつれ -->
       <div class="c09__cr__check-group__wrapper--furball-snarl">
         <div class="check c09__cr__check__wrapper">
-          <input type="checkbox" id="test2" checked="checked">
-          <label for="test2">毛玉・もつれ</label>
+          <input type="checkbox" id="furball" checked="checked">
+          <label for="furball">毛玉・もつれ</label>
         </div>
         <div class="pull-down c09__cr__drop-down--furball-snarl">
           <select class="pull-down__select c09__cr__select__area--furball-snarl" required>
@@ -206,12 +206,12 @@
       <div class="c09__cr__select__group--how-to-reserve">
         <p class="c09__cr__txt--how-to-reserve">予約経路</p>
         <div class="select c09__cr__select__wrapper--how-to-reserve">
-          <input type="radio" id="test4" name="radio" checked="checked">
-          <label class="c09__cr__select__choices--web" for="test4">Web</label>
-          <input type="radio" id="test3" name="radio">
-          <label class="c09__cr__select__choices--counter" for="test3">店頭</label>
-          <input type="radio" id="test3" name="radio">
-          <label class="c09__cr__select__choices--phone" for="test3">電話</label>
+          <input type="radio" id="web" name="radio" checked="checked">
+          <label class="c09__cr__select__choices--web" for="web">Web</label>
+          <input type="radio" id="counter" name="radio">
+          <label class="c09__cr__select__choices--counter" for="counter">店頭</label>
+          <input type="radio" id="phone" name="radio">
+          <label class="c09__cr__select__choices--phone" for="phone">電話</label>
         </div>
       </div>
       <!-- 備考 -->
