--- a/html/shop/reservation/edit/C09_cancel.html
+++ b/html/shop/reservation/edit/C09_cancel.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- meta情報 -->
-  <title>予約する（既存のお客さま）｜PETEMO グルーミングサロン 予約サイト管理</title>
+  <title>予約内容変更｜PETEMO グルーミングサロン 予約サイト管理</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <!-- reset css -->
@@ -60,8 +60,8 @@
         </div>
         <!-- ボタン類 -->
         <div class="c09__crcr__btn-wrapper">
-          <a href="" class="sub-button c09__crcr__btn--white">ご予約をお断り</a>
-          <a href="" class="most-important-button--green c09__crcr__btn--red">予約状況を再確認</a>
+          <a href="" class="sub-button c09__crcr__btn--white">予約キャンセルしない</a>
+          <a href="" class="most-important-button--green c09__crcr__btn--red">予約キャンセルする</a>
         </div>
       </div>
     </div>
