--- a/html/shop/reservation_new/input/C06_make-reservation_no-reservation.html
+++ b/html/shop/reservation_new/input/C06_make-reservation_no-reservation.html
@@ -36,7 +36,7 @@
         <p class="c06__mrnr__txt--reservations-available">ご予約可能です</p>
         <!-- 予約内容 -->
         <div class="c06__mrnr__reservation-details__wrapper">
-          <p class="c06__mrnr__txt__reservation-details c06__mrnr__txt--date-time">予約日時：予約日時：2021年7月1日（日）11：00～</p>
+          <p class="c06__mrnr__txt__reservation-details c06__mrnr__txt--date-time">予約日時：2021年7月1日（日）11：00～</p>
           <p class="c06__mrnr__txt__reservation-details c06__mrnr__txt--required-time">想定所要時間：4時間</p>
           <p class="c06__mrnr__txt__reservation-details c06__mrnr__txt--welcoming-time">お迎え時間：15：00ごろ</p>
           <p class="c06__mrnr__txt__reservation-details c06__mrnr__txt--assumed-value">想定金額：8,000円（税込）～</p>
