--- a/html/shop/attendance_day/B04_shift-management-day_edit.html
+++ b/html/shop/attendance_day/B04_shift-management-day_edit.html
@@ -36,7 +36,7 @@
         <div class="b04__smde__wrapper--status">
           <p class="b04__smde__txt--status">出勤状況</p>
           <div class="header-booking__pull-down pull-down b04__smde__pull-down">
-            <select class="pull-down__select " required>
+            <select class="pull-down__select b04__smde__pull-down__select" required>
               <option value="" selected>出勤</option>
               <option value="option2">＃</option>
               <option value="option3">○○○○店</option>
